--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -111,6 +111,18 @@
     .contact-ul {
         gap: 0.3rem;
     }
+    .cut-main {
+        flex-direction: column;
+    }
+    .cut h3 {
+        font-size: 1.7rem;
+    }
+    .cut-cell h4 {
+        font-size: 1.5rem;
+    }
+    .cut-cell p {
+        font-size: 0.95rem;
+    }
 }
 @media (min-width: 601px) and (max-width: 1200px) {
     .sidebar-label {
@@ -179,3 +191,4 @@
         left: -15px;
     }
 }
+
