--- a/styles/index.css
+++ b/styles/index.css
@@ -163,6 +163,9 @@ header {
 .section-3 {
     background-color: var(--white-1);
 }
+.section-3-wrap {
+    width: 100%;
+}
 .section-3-main {
     display: flex;
     flex-direction: column;
@@ -243,4 +246,5 @@ header {
     padding: 1rem;
 
 }
+
 
