--- a/styles/index.css
+++ b/styles/index.css
@@ -241,10 +241,13 @@ header {
     transition: max-height 0.4s ease, padding 0.4s ease;
     padding: 0 1rem;
 }
+.accordion-content p {
+    font-size: 0.95rem;
+}
 .accordion-item.active .accordion-content {
     max-height: 300px;
     padding: 1rem;
-
 }
+
 
 
