--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -86,11 +86,12 @@
     }
     .equipe-wrap {
         flex-direction: column;
-        gap: 1rem;
+        gap: 1.5rem;
     }
     .equipe-main {
         justify-content: flex-start;
         margin-top: 0;
+        gap: 2rem;
         flex-direction: column;
     }
     .equipe-img {
@@ -177,7 +178,7 @@
     }
     .text-box {
         font-size: 13px;
-        padding: 10px 10px;
+        padding: 0px 10px;
     }
     .right-container {
         left: 0;
@@ -192,11 +193,6 @@
         top: 35px;
     }
     .left-container-arrow, .right-container-arrow {
-        border-radius: 15px solid #FFFFFF;
-        border-left: 0;
-        left: -15px;
+        display: none;
     }
 }
-
-
-
