--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -27,6 +27,9 @@
     }
 }
 @media (max-width: 768px) {
+    h2:not(.hero-main h2) {
+        font-size: 2.5rem;
+    }
     .hero-main.index-hero h2, .hero-main.service-hero h1 {
         font-size: 3.5rem;
     }
@@ -194,5 +197,8 @@
     }
     .left-container-arrow, .right-container-arrow {
         display: none;
+    }
+    h2:not(.hero-main h2) {
+        font-size: 2rem;
     }
 }
