--- a/styles/realisations.css
+++ b/styles/realisations.css
@@ -30,9 +30,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: var(--white-1);
     font-size: 1.5rem;
     text-align: center;
+    line-height: 1.6em;
     padding: 1rem;
     cursor: pointer;
     font-family: RobotoSemiBold;
