--- a/styles/realisations.css
+++ b/styles/realisations.css
@@ -6,6 +6,12 @@
 }
 .realisations-wrap {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.realisations-wrap h2 {
+    color: var(--grey-1);
 }
 .realisation-cell {
     position: relative;
@@ -60,3 +66,4 @@
 .realisation-cell.active + .realisation-dropdown {
     max-height: 100%;
 }
+
