--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,6 +193,7 @@ header #check {
     align-items: center;
     gap: 0.5rem;
     width: 120px;
+    padding: 0;
 }
 #sidebarServicesBtn.open svg {
     transform: rotate(180deg);
@@ -590,4 +591,5 @@ footer .max-container {
     gap: 0.6rem;
 
 }
+
 
