--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -94,6 +94,7 @@
     }
     .service-img img {
         width: 100%;
+        height: 300px;
     }
     .service-cell.left-wrap div:nth-child(1) {
         order: 2;
@@ -131,6 +132,9 @@
     }
     .contact-ul {
         gap: 0.3rem;
+    }
+    .cut-wrap {
+        gap: 3rem;
     }
     .cut-main {
         flex-direction: column;
@@ -211,6 +215,7 @@
         font-size: 2rem;
     }
 }
+
 
 
 
