--- a/styles/index.css
+++ b/styles/index.css
@@ -42,6 +42,10 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
+}
+#bg-video::-webkit-media-controls {
+    display: none !important;
 }
 .video-overlay {
     position: absolute;
@@ -249,4 +253,5 @@ header {
     max-height: 350px;
     padding: 1rem;
 }
+
 
