--- a/styles/services.css
+++ b/styles/services.css
@@ -42,6 +42,10 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
+}
+#bg-video::-webkit-media-controls {
+    display: none !important;
 }
 .video-overlay {
     position: absolute;
@@ -227,4 +231,5 @@ header {
     height: 400px;
 
 }
+
 
